[gd_scene load_steps=2 format=3 uid="uid://b4qwv82jl1cwy"]

[ext_resource type="Script" uid="uid://3ahay2ry3ss5" path="res://scripts/text_scroll_scene.gd" id="1_va4sw"]

[node name="TextScrollScene" type="Node2D"]
script = ExtResource("1_va4sw")

[node name="TextBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -885.0
offset_top = 97.0
offset_right = 886.0
offset_bottom = 479.0
grow_horizontal = 2
alignment = 1

[node name="CurrentTextLine" type="Label" parent="TextBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
text = "eeeeeeeeeee"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
